2025-12-07T00:52:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19996667462 # 831
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-07
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 252 286 / 253 287
* notice: next accum: outdated-unq outdated-all / unq all: 252 286 / 254 288
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-06]

2025-12-04T00:45:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19913763176 # 828
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-04
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 251 285 / 253 287
* notice: next accum: outdated-unq outdated-all / unq all: 252 286 / 253 287
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-19] / []

2025-12-03T00:45:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19878408212 # 827
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-03
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 250 284 / 253 287
* notice: next accum: outdated-unq outdated-all / unq all: 251 285 / 253 287
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-18] / []

2025-12-01T00:56:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19807709237 # 825